force-app/main/default/objects/Case/fields/Collaborators__c.field-meta.xml
<CustomField>
    <fullName>Collaborators__c</fullName>
    <inlineHelpText>Please provide comma separated emails of the case collaborators.</inlineHelpText>
    <label>Collaborators</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>