force-app/main/default/objects/Case/fields/Developer__c.field-meta.xml
<CustomField>
    <fullName>Developer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Please provide the Developer who can assist with the issue.</inlineHelpText>
    <label>Developer</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Cases_Developer</relationshipName>
    <type>Lookup</type>
</CustomField>