force-app/main/default/objects/Case/fields/Issue_Environment__c.field-meta.xml
<CustomField>
    <fullName>Issue_Environment__c</fullName>
    <inlineHelpText>Please provide the environment where the issue is.</inlineHelpText>
    <label>Issue Environment</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>INT</fullName>
            </value>
            <value>
                <fullName>QA</fullName>
            </value>
            <value>
                <fullName>UAT</fullName>
            </value>
            <value>
                <fullName>UAT 2</fullName>
            </value>
            <value>
                <fullName>PreProd</fullName>
            </value>
            <value>
                <fullName>Prod</fullName>
            </value>
            <value>
                <fullName>Training</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>