force-app/main/default/objects/Case/fields/Preventive_Steps__c.field-meta.xml
<CustomField>
    <fullName>Preventive_Steps__c</fullName>
    <inlineHelpText>Please provide the Preventive steps to avoid issue repetation.</inlineHelpText>
    <label>Preventive Steps</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>