force-app/main/default/objects/Case/fields/RCA_Type__c.field-meta.xml
<CustomField>
    <fullName>RCA_Type__c</fullName>
    <inlineHelpText>Please provide the category for the case.</inlineHelpText>
    <label>RCA Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Improper Merge by Dev</fullName>
            </value>
            <value>
                <fullName>Code Override by DevOps</fullName>
            </value>
            <value>
                <fullName>Environment Configuration</fullName>
            </value>
            <value>
                <fullName>Missed Manual Step</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>