force-app/main/default/objects/Case/fields/Root_Cause_Analysis__c.field-meta.xml
<CustomField>
    <fullName>Root_Cause_Analysis__c</fullName>
    <inlineHelpText>Please provide the Root Cause Analysis for the issue.</inlineHelpText>
    <label>Root Cause Analysis</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>