force-app/main/default/objects/Case/fields/Steps_for_Resolution__c.field-meta.xml
<CustomField>
    <fullName>Steps_for_Resolution__c</fullName>
    <inlineHelpText>Please provide the Steps followed for Resolution of the issue.</inlineHelpText>
    <label>Steps for Resolution</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>