force-app/main/default/objects/Case/fields/User_Story_Impacted__c.field-meta.xml
<CustomField>
    <fullName>User_Story_Impacted__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Please provide the user story that has been impacted.</inlineHelpText>
    <label>User Story Impacted</label>
    <referenceTo>copado__User_Story__c</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases_User_Story_Impacted</relationshipName>
    <type>Lookup</type>
</CustomField>