force-app/main/default/objects/Case/listViews/Cases_Submitted_by_Me.listView-meta.xml
<ListView>
    <fullName>Cases_Submitted_by_Me</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>NAME</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Mine</filterScope>
    <label>Cases Submitted by Me</label>
</ListView>