force-app/main/default/objects/Case/listViews/DevOps_Case.listView-meta.xml
<ListView>
    <fullName>DevOps_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>DevOps</label>
    <queue>DevOps</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>